--- a/about.html
+++ b/about.html
@@ -105,20 +105,7 @@
                     <a href="./about.html">About</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./services.html">Services</a>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="./contact.html">Contact</a>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="#">Pages</a>
-                    <ul class="sub-menu">
-                      <li><a href="./page-1.html">Our Team</a></li>
-                      <li><a href="./page-2.html">Team Details</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="./services.html">Services</a>
+                    <a href="#">Services</a>
                     <ul class="sub-menu">
                       <li>
                         <a href="./services.html#educational-services"
@@ -131,17 +118,24 @@
                         >
                       </li>
                       <li>
-                        <a href="./services.html#computer-academy"
+                        <a href="./services.html#computer-services"
                           >Computer Academy</a
                         >
                       </li>
                     </ul>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./projects.html">Projects</a>
+                    <a href="./contact.html">Contact</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./contact.html">Contact</a>
+                    <a href="#">Pages</a>
+                    <ul class="sub-menu">
+                      <li><a href="./page-1.html">Our Team</a></li>
+                      <li><a href="./page-2.html">Team Details</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children active">
+                    <a href="./projects.html">Projects</a>
                   </li>
                 </ul>
               </div>
@@ -217,17 +211,17 @@
                 </li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
-                  <a href="./services.html">Pages</a>
+                  <a href="#">Pages</a>
                   <ul class="sub-menu">
                     <li>
-                      <a href="./index.html#services">Our Team</a>
+                      <a href="./page-1.html">Our Team</a>
                     </li>
                     <li>
-                      <a href="./index.html#services">Team Details</a>
+                      <a href="./page-2.html">Team Details</a>
                     </li>
                   </ul>
                 </li>
-                <li><a href="#contact">Projects</a></li>
+                <li><a href="./projects.html">Projects</a></li>
               </ul>
             </div>
             <div class="header-main-info">
