--- a/services.html
+++ b/services.html
@@ -105,20 +105,7 @@
                     <a href="./about.html">About</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./services.html">Services</a>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="./contact.html">Contact</a>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="#">Pages</a>
-                    <ul class="sub-menu">
-                      <li><a href="./page-1.html">Our Team</a></li>
-                      <li><a href="./page-2.html">Team Details</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="./services.html">Services</a>
+                    <a href="#">Services</a>
                     <ul class="sub-menu">
                       <li>
                         <a href="./services.html#educational-services"
@@ -131,17 +118,24 @@
                         >
                       </li>
                       <li>
-                        <a href="./services.html#computer-academy"
+                        <a href="./services.html#computer-services"
                           >Computer Academy</a
                         >
                       </li>
                     </ul>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./projects.html">Projects</a>
+                    <a href="./contact.html">Contact</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./contact.html">Contact</a>
+                    <a href="#">Pages</a>
+                    <ul class="sub-menu">
+                      <li><a href="./page-1.html">Our Team</a></li>
+                      <li><a href="./page-2.html">Team Details</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children active">
+                    <a href="./projects.html">Projects</a>
                   </li>
                 </ul>
               </div>
@@ -215,7 +209,7 @@
                       >
                     </li>
                     <li>
-                      <a href="./services.html#Computer-services"
+                      <a href="./services.html#computer-services"
                         >Computer Academy</a
                       >
                     </li>
@@ -223,17 +217,17 @@
                 </li>
                 <li><a href="./contact.html">Contact</a></li>
                 <li>
-                  <a href="./services.html">Pages</a>
+                  <a href="#">Pages</a>
                   <ul class="sub-menu">
                     <li>
-                      <a href="./index.html#services">Our Team</a>
+                      <a href="./page-1.html">Our Team</a>
                     </li>
                     <li>
-                      <a href="./index.html#services">Team Details</a>
+                      <a href="./page-2.html">Team Details</a>
                     </li>
                   </ul>
                 </li>
-                <li><a href="#contact">Projects</a></li>
+                <li><a href="./projects.html">Projects</a></li>
               </ul>
             </div>
             <div class="header-main-info">
@@ -304,29 +298,78 @@
             </div>
           </div>
         </div>
-        <div class="saintaco-edu-serv" id="educational-services">
-          <div class="serv-head">
-            <img src="assets/images/icon/about-icon-2.png" alt="" />
-            <h3>Educational Services</h3>
+        <div class="container-serv">
+          <!-- Educational Services -->
+          <div class="saintaco-serv" id="educational-services">
+            <h1 class="serv-txt">Educational Services</h1>
+            <div class="service-img">
+              <img src="assets/images/service-thumb-2.png" alt="" />
+            </div>
+            <div class="serv-content">
+              <div class="serv-head">
+                <img src="assets/images/icon/about-icon-2.png" alt="" />
+                <h3>Educational Services</h3>
+                <img src="assets/images/icon/about-icon-2.png" alt="" />
+              </div>
+              <div class="serv-content-list">
+                <ul>
+                  <li>✔️ IJMB/PRELIM Application</li>
+                  <li>✔️ Post UTME Registration</li>
+                  <li>✔️ Part-time Registration</li>
+                  <li>✔️ Course Registration/Exam Card</li>
+                  <li>✔️ LVT/SANDWICH Application</li>
+                  <li>✔️ Postgraduate Registration</li>
+                  <li>✔️ And More...</li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="serv-content">
-            <h4>Academic Programs</h4>
-            <ul>
-              <li>✔️ IJMB/PRELIM Application</li>
-              <li>✔️ Post UTME Registration</li>
-              <li>✔️ Part-time Registration</li>
-            </ul>
+          <!-- General Services -->
+          <h1 class="serv-txt" id="General-services">General Services</h1>
+          <div class="saintaco-serv">
+            <div class="serv-content">
+              <div class="serv-head">
+                <img src="assets/images/icon/about-icon-1.png" alt="" />
+                <h3>General Services</h3>
+                <img src="assets/images/icon/about-icon-1.png" alt="" />
+              </div>
+              <div class="serv-content-list">
+                <ul>
+                  <li>✔️ JAMB admission letter</li>
+                  <li>✔️ JAMB original result</li>
+                  <li>✔️ NYSC registration</li>
+                  <li>✔️ Online applications</li>
+                  <li>✔️ Passport services</li>
+                  <li>✔️ POS facilities</li>
+                  <li>✔️ Lamination</li>
+                  <li>✔️ And More...</li>
+                </ul>
+              </div>
+            </div>
+            <div class="service-img" id="service-gen-img">
+              <img src="assets/images/service-thumb-4.png" alt="" />
+            </div>
           </div>
-          <div class="serv-content">
-            <h4>Administrative Services</h4>
-            <ul>
-              <li>✔️ Course Registration/Exam Card</li>
-              <li>✔️ LVT/SANDWICH Application</li>
-              <li>✔️ Postgraduate Registration</li>
-            </ul>
-          </div>
-          <div class="service-img">
-            <img src="assets/images/service-thumb-4.png" alt="">
+          <!-- Computer Academy -->
+          <h1 class="serv-txt" id="computer-services">Computer Academy</h1>
+          <div class="saintaco-serv" id="computer-services-main">
+            <div class="serv-content">
+              <div class="serv-head">
+                <img src="assets/images/icon/service-icon-4.png" alt="" />
+                <h3>Computer Academy</h3>
+                <img
+                  src="assets/images/icon/service-icon-4.png"
+                  alt=""
+                  id="cmp-img"
+                />
+              </div>
+              <div class="serv-content-list">
+                <li>
+                  Register for the computer academy at your earliest convenience
+                </li>
+                <a href="https://wa.me/2347065604027" class="pop-btn">ENROLL</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -594,7 +637,9 @@
                           <li>- Postgraduate registration</li>
                         </ul>
 
-                        <a class="pop-btn">APPLY</a>
+                        <a href="https://wa.me/2347065604027" class="pop-btn"
+                          >APPLY</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -617,7 +662,9 @@
                           <li>- Acceptance fee payment</li>
                           <li>- School fees payment</li>
                         </ul>
-                        <a class="pop-btn">Make a payment</a>
+                        <a href="https://wa.me/2347065604027" class="pop-btn"
+                          >Make a payment</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -640,7 +687,9 @@
                           Register for the computer academy at your earliest
                           convenience
                         </p>
-                        <a class="pop-btn">ENROLL</a>
+                        <a href="https://wa.me/2347065604027" class="pop-btn"
+                          >ENROLL</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -664,7 +713,9 @@
                           <li>- JAMB original result</li>
                           <li>- NYSC registration</li>
                         </ul>
-                        <a class="pop-btn">REGISTER</a>
+                        <a href="https://wa.me/2347065604027" class="pop-btn"
+                          >REGISTER</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -690,7 +741,9 @@
                           <li>- Lamination</li>
                           <li>And More...</li>
                         </ul>
-                        <a class="pop-btn">EXPLORE</a>
+                        <a href="https://wa.me/2347065604027" class="pop-btn"
+                          >EXPLORE</a
+                        >
                       </div>
                     </div>
                   </div>
@@ -761,16 +814,6 @@
             id="form-learnmore"
             >Send a DM</a
           >
-        </div>
-      </div>
-      <!-- whatsapp popup -->
-      <div class="whatsapp-popup" id="wa-pop">
-        <div>
-          <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
-          <button class="wa-pop-btn" id="wa-end-btn">Cancel</button>
-          <button class="wa-pop-btn" id="wa-btn">
-            <a href="https://wa.me/2347065604027">Continue</a>
-          </button>
         </div>
       </div>
       <div id="web-form">
