--- a/contact.html
+++ b/contact.html
@@ -105,20 +105,7 @@
                     <a href="./about.html">About</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./services.html">Services</a>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="./contact.html">Contact</a>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="#">Pages</a>
-                    <ul class="sub-menu">
-                      <li><a href="./page-1.html">Our Team</a></li>
-                      <li><a href="./page-2.html">Team Details</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children active">
-                    <a href="./services.html">Services</a>
+                    <a href="#">Services</a>
                     <ul class="sub-menu">
                       <li>
                         <a href="./services.html#educational-services"
@@ -131,17 +118,24 @@
                         >
                       </li>
                       <li>
-                        <a href="./services.html#computer-academy"
+                        <a href="./services.html#computer-services"
                           >Computer Academy</a
                         >
                       </li>
                     </ul>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./projects.html">Projects</a>
+                    <a href="./contact.html">Contact</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./contact.html">Contact</a>
+                    <a href="#">Pages</a>
+                    <ul class="sub-menu">
+                      <li><a href="./page-1.html">Our Team</a></li>
+                      <li><a href="./page-2.html">Team Details</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children active">
+                    <a href="./projects.html">Projects</a>
                   </li>
                 </ul>
               </div>
